update Scurlock wiki page

--- a/_data/world/characters/nobles-and-notables.yml
+++ b/_data/world/characters/nobles-and-notables.yml
@@ -48,6 +48,6 @@
   w-id: anastasia-bowmore
   excerpt: Daughter of the lady Bowmore. Currently head of the Bowmore family.
 
-- name: Cole Ardmore/Boris Karhowl, Mysteirous Heir
+- name: Cole Ardmore/Boris Karhowl, Mysterious Heir
   w-id: cole-ardmore
   excerpt: Brother to Valanthe. Jeremy's cool friend. Possessed by Victoria Karhowl and MIA.
