Add next and back links to session recap pages

--- a/_config.yml
+++ b/_config.yml
@@ -48,6 +48,12 @@ defaults:
       layout: "default"
   -
     scope:
+      path: "story"
+      type: "posts"
+    values:
+      layout: "story"
+  -
+    scope:
       path: ""
       type: "contribute"
     values:
