--- a/_data/gang/stats.yml
+++ b/_data/gang/stats.yml
@@ -49,6 +49,7 @@ abilities:
       - -1 heat during downtime
       - +1d to gather info on city elites
     desc: Take -1 heat during downtime and +1d to gather information about the city's elite.
+  - name: ghost-echoes
 
 claims:
   - name: informants
