update some npc descriptions

--- a/_data/world/characters/criminals.yml
+++ b/_data/world/characters/criminals.yml
@@ -4,7 +4,7 @@
 
 - name: Veldren
   w-id: veldren
-  excerpt: Psychonaut. Has a relationship with Jesus Christ and Bonky Bill the frog. Once an ally to the Nameless. Has flipped.
+  excerpt: Psychonaut. Has a relationship with Jesus Christ and Bonky Bill the frog. Once again an ally to the Nameless.
 
 - name: Myleria Klev
   w-id: myleria-krev
