--- a/_data/world/characters/law-and-order.yml
+++ b/_data/world/characters/law-and-order.yml
@@ -1,6 +1,6 @@
 - name: Morgan Clelland
   w-id: morgan-clelland
-  excerpt: Son of the current Lord Clelland. Has the family stimulant problem. Police captain, has greater ambitions. Former Nameless asset. Flipped.
+  excerpt: Son of the current Lord Clelland. Has the family stimulant problem. Police captain, has greater ambitions. Former Nameless asset. Flipped, killed by Spirit Wardens.
   faction: bluecoats
 
 - name: Cassiopeia Beasby
@@ -13,7 +13,7 @@
 
 - name: Chuck Morgenstern
   w-id: chuck-morgenstern
-  excerpt: Inspector from the Capital. Extremely loose canon (results guaranteed). Canonically based on Charlie Day. Jammer's ex. Dead?
+  excerpt: Inspector from the Capital. Extremely loose canon (results guaranteed). Canonically based on Charlie Day. Jammer's ex. Half of his body is burned. Curiously chill with the Nameless.
 
 - name: The Spider
   w-id: the-spider
