--- a/_data/world/characters/nobles-and-notables.yml
+++ b/_data/world/characters/nobles-and-notables.yml
@@ -26,7 +26,7 @@
 
 - name: Lord Clelland
   w-id: lord-clelland
-  excerpt: Paranoid and stimulant-addicted blue-blood to the bone. Abrupt. Has shat himself publicly on multiple occasions. Doesn't care what you think.
+  excerpt: Paranoid and stimulant-addicted blue-blood to the bone. Abrupt. Has shat himself publicly on multiple occasions. Currently flayed and crucified and dying-to-dead on suspicion of treason.
 
 - name: Lady Claddage
   w-id: lady-claddage
