NPC updates through 3/21 session

--- a/_data/world/characters/others-of-note.yml
+++ b/_data/world/characters/others-of-note.yml
@@ -20,7 +20,7 @@
 
 - name: Studebaker Spud
   w-id: studebaker-spud
-  excerpt: Impresario, entrepreneur, idiot. Catspaw for the Seventh Tower Consortium. Arrested and under suspicion after Joseph Woodward's failure and framing.
+  excerpt: Impresario, entrepreneur, idiot. Catspaw for the Seventh Tower Consortium. Arrested and under suspicion after Joseph Woodward's failure and framing. Flayed and dead.
 
 - name: Dr. Carver Wrackham Malleus, PhD, IFD
   w-id: carver-malleus
